refactor: atualizar usuário está funcionando com token